# Findreve

./: app.py  pyproject.toml
middleware/: admin.py  dependencies.py  user.py
model/: __init__.py  database.py  firmware.py  item.py  user.py
model/base/: __init__.py
model/mixin/: __init__.py  table.py
routes/: admin.py  object.py  ota.py
services/: admin.py  ota.py
